# log-data-generator

./: .gitignore  Example_of_output_logs_file.csv  LICENSE  README.md  WEB_UI_README.md  app.py  cli.py  config.json  dashboards.py  data_generators.py  docker-compose.yml  generate_logs.py  pyproject.toml  requirements.txt  scenarios.py  streaming.py
output_saved_objects/: kibana_saved_objects.ndjson  kibana_saved_searches.ndjson
screenshots/: README.md
static/css/: style.css
templates/: config.html  generate.html  index.html  progress.html
